that generate a reaction can help identify and debug situations like this.

* Added instructions to Makefile.cmake for Mac OS X 10.9+ users regarding
modifications that must be made to build Network3.

* Bug fixes

** An error is now thrown if zero-order synthesis products do not have compartments.

** An error is now thrown if an unrecognized block name is encountered.

** BNG will no longer switch to "compartmental" mode if the 'compartments' block is empty.

** Expressions for compartment volumes are now correctly evaluated when generating a BNG-XML file.

== BioNetGen-2.2.5-stable ==
'''''2013 July XX'''''

==== New Features ====

===== BioNetGen-to-MCell Converter =====
The converter creates spatial MCell models from BioNetGen. It is called 
by adding "<big><tt>writeMDL()</tt></big>" to the actions of a BioNetGen 
model file. It also requires a geometry input file externally created using 
CellBlender, an addon to the Blender software for creating MCell geometries. 
Execution of a BioNetGen model integrates the reaction network and geometry 
information and creates a MCell model file (.mdl). Alternatively,
"writeMDL()" enables direct execution and import of BioNetGen models from 
CellBlender. The imported BioNetGen model can be integrated with geometries 
created in CellBlender and exported from CellBlender as MCell model files. 

===== AutoHPP =====
AutoHPP automates the construction and simulation of Hybrid Particle/Population
systems. AutoHPP profiles species populations during a test simulation,
identifies species with average population graater than a threshold, and then
constructs and simulates an HPP system where the identified species are treated
as lumped populations. Auto HPP is implemented in the "auto_hpp.pl" script
found in the "Perl2" subfolder (requires NFsim).

==== Minor changes ====
* If "BNG2.pl" is called without a model argument, the help menu is printed to
STDOUT. (In prior releases, BNG2.pl exited silently.)