@@ -30,9 +30,18 @@ modifications that must be made to build Network3.
 
 ** An error is now thrown if an unrecognized block name is encountered.
 
-** BNG will no longer switch to "compartmental" mode if the 'compartments' block is empty.
+** BNG will no longer switch to "compartmental" mode if the <big><tt>compartments'</tt></big> 
+block is empty.
 
 ** Expressions for compartment volumes are now correctly evaluated when generating a BNG-XML file.
+
+** Fixed an inconsistency where forward referencing of parameters/observables was allowed for
+functions defined in the <big><tt>functions</tt></big> block but not in the 
+<big><tt>reaction rules</tt></big> block. 
+
+** Fixed a bug where in rare cases a function defined in the <big><tt>reaction rules</tt></big> 
+block would be typed as a 'ConstantExpression'. This would cause simulation to fail since it
+would be placed in the <big><tt>parameters</tt></big> block of the generated NET file.
 
 == BioNetGen-2.2.5-stable ==
 '''''2013 July XX'''''
